--- a/MainPage.css
+++ b/MainPage.css
@@ -6,9 +6,6 @@
 body{
     margin-top: 0;
 }
-.DisplayHidden{
-    display: none;
-}
 .OuterDiv{
    padding-left: 3%;
    padding-right: 3%;
@@ -18,7 +15,7 @@ body{
    position: fixed;
    top: 0px;
    margin-top: 10px;
-   z-index: 10;
+   z-index: 100;
    text-align: center;
    background-color: lightgray;
 }
@@ -33,7 +30,7 @@ body{
 .SubHeadSection{
     width: calc(100% - 55%);
     position: fixed;
-    top: 8%;
+    top: 14%;
     left: 23.9%;
     z-index: 10;
     text-align: center;
@@ -42,7 +39,7 @@ body{
 .PublicComplain{
     width: calc(100% - 55%);
     position: absolute;
-    top: 18%;
+    top: 23%;
     left: 23.9%;  
 }
 .EachComplain{
@@ -53,9 +50,9 @@ body{
 .MyComplain{
     width: calc(100% - 75%);
     position: fixed;
-    top: 8%;
+    top: 14%;
     right: 3.5%;
-    height: 43vh;
+    height: 40vh;
     z-index: 10;
     text-align: center;
     background-color: lightgray;
@@ -63,19 +60,129 @@ body{
 .MyStats{
     width: calc(100% - 75%);
     position: fixed;
-    top: 54%;
+    top: 56%;
     right: 3.5%;
-    height: 43vh;
+    height: 40vh;
     text-align: center;
     background-color: lightgray;
 }
 .MyOperation{
     width: calc(100% - 80%);
     position: fixed;
-    top: 8%;
-    height: 89vh;
+    top: 14%;
+    height: 82vh;
     z-index: 10;
     text-align: center;
     background-color: lightgray;
 }
+
+
+
+
+/* Header Section Styles */
+.DisplayHidden{
+    display: none;
+}
+.Navigation{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding-left: 70px;
+    padding-right: 70px;
+}
+.Navigation ul{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    column-gap: 50px;
+}
+.Navigation ul li{
+    list-style: none;
+}
+.Navigation ul li a{
+    text-decoration: none;
+    font-size: 20px;
+}
+.Navigation ul li button{
+    height: 33px;
+    width: 130px;
+    font-size: 17px;
+    border-radius: 10px;
+    background-color: cornflowerblue;
+    border: none;
+}
+.Navigation ul li a:hover{
+    color: brown;
+}
+.Navigation ul li button:hover{
+    background-color: rgba(0, 0, 255, 0.548);
+}
+.Navigation ul li:hover #DropDownContent{
+    display: block;
+}
+#DropDownContent a:hover{
+    color:brown;
+}
+.LanguageButton{
+    padding-left: 30px;
+}
+.LanguageImage{
+    position: relative;
+    left: 80px;
+    top: 1.5px;
+}
+.Logo img{
+    height: 130px;
+    width: 230px;
+}
+.LanguageImage img{
+    height: 23px;
+    width: 23px;
+}
+#DropDownContent{
+    display: none;
+    position: absolute;
+}
+#DropDownContent a{
+   display: block;
+   margin-top: 10px;
+   margin-left: 40px;
+}
+
+
+
+
+
+/* Subheader Section styles */
+
+
+.SubHeadSection button{
+   height: 35px;
+   width: 130px;
+   border-radius: 8px;
+   font-size: 16px;
+   margin: 20px 30px 20px 0px;
+   float: right;
+}
+.FilterDropDown{ 
+    position: absolute;
+    right: 3%;
+    top: 75px;
+    width: 135px;
+    background-color: lightgray;
+    display: none;
+}
+.FilterDropDown button{
+    border: none;
+    background-color: transparent;
+    height: 10px;
+    width: 10px;
+    margin-top: 0;
+}
+.FilterButton:hover .FilterDropDown{
+    display: block;
+    display: flex;
+    flex-direction: column;
+ }
 
